[project]
name = "horse-race-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=2,<3)",
    "jupyter (>=1.1.1,<2.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "django (>=6.0.2,<7.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.50.0,<0.51.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
